feat: log functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set(SOURCES          # All .cpp files in src/
     src/validate.cpp
     src/status.cpp
     src/message.cpp
+    src/log.cpp
 )
 
 set(LIBRARY_NAME engine)  # Default name for the library built from src/*.cpp (change if you wish)
