feat: `upload` command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ set(SOURCES          # All .cpp files in src/
     src/common.cpp
     src/authenticate.cpp
     src/connect.cpp
-    src/download.cpp
+    src/command/download.cpp
     src/command/ls.cpp
     src/reply.cpp
     src/upload.cpp
